<resources>
    <string name="app_name">kotlin家計簿</string>
    <string name="save">保存する</string>
    <string name="pay_type">項目</string>
    <string name="pay_value">支出額</string>
    <string name="pay_date">日付</string>
    <string name="open_details">日付選択</string>
    <string name="date_placeholder">日付を設定</string>
    <string name="no_date">No Data</string>
    <string name="pick_date">Pick Date</string>
    <string name="file_name">data.txt</string>
    <string name="test">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="hoges">
        <item>hoge1</item>
        <item>hoge2</item>
        <item>hoge3</item>
        <item>hoge4</item>
        <item>hoge5</item>
        <item>hoge6</item>
        <item>hoge7</item>
        <item>hoge8</item>
    </string-array>

    <string-array name="keys">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
        <item>item6</item>
        <item>item7</item>
        <item>item8</item>
        <item>item9</item>
        <item>item10</item>
    </string-array>
</resources>
